feat: WIP merge booking