@@ -11,6 +11,7 @@ import androidx.recyclerview.widget.RecyclerView;
 import com.bumptech.glide.Glide;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import vn.edu.usth.mcma.R;
 import vn.edu.usth.mcma.frontend.ConnectAPI.Model.Response.BookingProcess.Genre;
@@ -38,13 +39,13 @@ public class Search_Adapter extends RecyclerView.Adapter<Search_ViewHolder> {
         SearchMovieByNameResponse item = items.get(position);
         holder.nameView.setText(item.getName() != null ? item.getName() : "Unknown");
 
-        List<String> genres = item.getGenres().stream().map(Genre::getName).toList();
+        List<String> genres = item.getGenres().stream().map(Genre::getName).collect(Collectors.toList());
         if (genres != null && !genres.isEmpty() ) {
             holder.typeView.setText(genres.get(0)); // Use a valid index, e.g., 0 or a relevant value
         } else {
             holder.typeView.setText(R.string.unknown_genre); // Fallback text
         }
-        holder.timeView.setText(item.getLength() != null ? item.getLength()/60 + " min" : "Unknown");
+        holder.timeView.setText(item.getLength() != null ? item.getLength() + " min" : "Unknown");
 
         String rating = item.getRating().getName();
         if (genres != null && !genres.isEmpty() ) {
